@@ -1029,4 +1029,5 @@ INSERT INTO `gibbonPermission` (`gibbonRoleID` ,`gibbonActionID`) VALUES (001, (
 INSERT INTO `gibbonAction` (`gibbonModuleID`, `name`, `precedence`, `category`, `description`, `helpURL`, `URLList`, `entryURL`, `entrySidebar`, `menuShow`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES((SELECT gibbonModuleID FROM gibbonModule WHERE name='Calendar'), 'Manage Events_my', 0, 'Administration', 'Allows users to create ands edit thier own calendar events.', '', 'calendar_event_manage.php, calendar_event_add.php, calendar_event_edit.php, calendar_event_view.php, calendar_event_enrolment.php, calendar_event_enrolment_add.php', 'calendar_event_manage.php', 'Y', 'Y', 'Y', 'Y', 'N', 'N', 'Y', 'Y', 'N', 'N', 'N');end
 INSERT INTO `gibbonPermission` (`gibbonRoleID` ,`gibbonActionID`) VALUES (001, (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Calendar' AND gibbonAction.name='Manage Events_my'));end
 INSERT INTO `gibbonPermission` (`gibbonRoleID` ,`gibbonActionID`) VALUES (002, (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Calendar' AND gibbonAction.name='Manage Events_my'));end
+INSERT INTO `gibbonLibraryType` (`name`, `active`, `fields`) VALUES ('Digital Publication', 'Y', '[{\"name\":\"URL Link\",\"description\":\"Paste the url link of the digital publication\",\"type\":\"Text\",\"options\":\"\",\"default\":\"\",\"required\":\"Y\"}]');end
 ";
