@@ -46,6 +46,7 @@ v30.0.00
         Formal Assessment: added a Year Group filter option to Manage External Assessment
         Individual Needs: enabled viewing IN records for past students as read-only
         Library: added the option to send an email to parents when lending a library item
+        Library: added a new type called Digital Publication
         Messenger: enabled resending to any recipient when read receipts are off in Send Report
         Messenger: added clarifying text to Applicants target which only includes Accepted applications
         Messenger: enabled users with Manage Messages_all access to see shareable link in Send Report
